WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
321883
[LBSE] An empty viewBox does not disable rendering of the outermost <svg>
https://bugs.webkit.org/show_bug.cgi?id=321883
Summary
[LBSE] An empty viewBox does not disable rendering of the outermost <svg>
Nikolas Zimmermann
Reported
2026-08-16 15:13:39 PDT
Fixes the issues Karl fixed here:
https://bugs.webkit.org/show_bug.cgi?id=320095
, also for LBSE
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2026-08-16 15:22:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/71730
EWS
Comment 2
2026-08-17 04:10:29 PDT
Committed
319284@main
(3797ce8cd607): <
https://commits.webkit.org/319284@main
> Reviewed commits have been landed. Closing PR #71730 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-08-17 04:11:14 PDT
<
rdar://problem/185098023
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug