Source/WebCore/svg/SVGSVGElement.h
@@ -113,6 +113,8 @@ public:
     FloatRect currentViewBoxRect() const;
     bool hasSynthesizedViewBoxForSVGImage() const;
 
+    bool viewBoxDisablesPainting();
+
     AffineTransform viewBoxToViewTransform(float viewWidth, float viewHeight) const;
     bool hasTransformRelatedAttributes() const final;
 
